feat: 중복 닉네임 제거